test_deployment_old/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-service-1
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-service-1
  template:
    metadata:
      labels:
        app: my-service-1
    spec:
      containers:
        - name: my-service-1
          image: nginx
          ports:
            - containerPort: 80
