test_deployment_old/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-service-2
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-service-2
  template:
    metadata:
      labels:
        app: my-service-2
    spec:
      containers:
        - name: my-service-2
          image: httpd
          ports:
            - containerPort: 80
