test_deployment_old/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-1
  namespace: default
spec:
  selector:
    app: my-service-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
