test_deployment_old/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-2
  namespace: default
spec:
  selector:
    app: my-service-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
