test_deployment_old/httproute1.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: example-route-1
  namespace: default
spec:
  parentRefs:
    - name: example-gateway
  rules:
    - matches:
        - path:
            type: Prefix
            value: "/service1"
      forwardTo:
        - serviceName: my-service-1
          port: 80
