test_deployment_old/httproute2.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: example-route-2
  namespace: default
spec:
  parentRefs:
    - name: example-gateway
  rules:
    - matches:
        - path:
            type: Prefix
            value: "/service2"
      forwardTo:
        - serviceName: my-service-2
          port: 80
